[workspace]

[package]
name = "display-demo"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
version = "0.2.0"
publish = false
license = "proprietary"
readme = "readme.md"
keywords = ["ssd1306"]
categories = ["embedded", "no-std", "no-std::no-alloc"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
display-interface = "0.5"
defmt = "0.3"
defmt-rtt = "0.4"

embassy-futures = { version = "0.1" }
embassy-embedded-hal = { version = "0.1", features = ["defmt"] }
embassy-executor = { version = "0.5", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-rp = { version = "0.1", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-sync = { version = "0.5", features = ["defmt"] }
embassy-time = { version = "0.3", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.1", features = ["defmt"] }

embedded-graphics = "0.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }
ssd1309 = { git = "https://github.com/antonok-edm/ssd1309" }
static_cell = { version = "2", features = ["nightly"] }
portable-atomic = { version = "1", features = ["critical-section"] }
display-interface-spi = "0.4.1"

[profile.release]
#strip = true
debug = 2
opt-level = 'z'
lto = true
codegen-units = 1
